fix image and text gap on services card

--- a/assets/styles/servicesStyle.css
+++ b/assets/styles/servicesStyle.css
@@ -69,6 +69,7 @@
   font-weight: 600;
   line-height: 32px; /* 133.333% */
 
+  margin-top: 18%;
   margin-bottom: 12px;
 }
 
